--- a/teaching-inf312.qmd
+++ b/teaching-inf312.qmd
@@ -2,7 +2,7 @@
 title: "Worlds become data"
 ---
 
-## Preamble 
+## Preamble
 
 ### Overview
 
@@ -10,24 +10,24 @@ To a certain extent we are wasting our time. We have a perfect model of the worl
 
 ### FAQ
 
-- Can I audit this course? Sure, but it is pointless, because the only way to learn this stuff is to do the work.
-- What is a tutorial? You write a short paper. Then you submit it. The next day, during class, we'll discuss it.
-- Why is there so much assessment? The only way to learn this stuff is to actually do the work, and students only do the work when they are assessed. It is unfortunate, but there is no way around it.
-- How difficult is the course? The course is not difficult, but the hands-on-projects mean it is a lot of work. 
-- What is the format of the class? There are rarely old-school lectures because those are not effective. You should read the relevant chapter before class. During class we will focus on tutorials and discussion. We will also have industry guests discuss their experience.
+-   Can I audit this course? Sure, but it is pointless, because the only way to learn this stuff is to do the work.
+-   What is a tutorial? You write a short paper. Then you submit it. The next day, during class, we'll discuss it.
+-   Why is there so much assessment? The only way to learn this stuff is to actually do the work, and students only do the work when they are assessed. It is unfortunate, but there is no way around it.
+-   How difficult is the course? The course is not difficult, but the hands-on-projects mean it is a lot of work.
+-   What is the format of the class? There are rarely old-school lectures because those are not effective. You should read the relevant chapter before class. During class we will focus on tutorials and discussion. We will also have industry guests discuss their experience.
 
 ### Past iterations
 
-- 2023
-  - [Syllabus](pdfs/inf312-2023-syllabus.pdf)
-  - [Student evals](pdfs/inf312-2023-evals.pdf)
-- 2022
-  - [Syllabus](pdfs/inf312-2022-syllabus.pdf)
-  - [Student evals](pdfs/inf312-2022-evals.pdf)
+-   2023
+    -   [Syllabus](pdfs/inf312-2023-syllabus.pdf)
+    -   [Student evals](pdfs/inf312-2023-evals.pdf)
+-   2022
+    -   [Syllabus](pdfs/inf312-2022-syllabus.pdf)
+    -   [Student evals](pdfs/inf312-2022-evals.pdf)
 
 ### Pre-requisites
 
-- None.
+-   None.
 
 ### Textbook
 
@@ -37,90 +37,91 @@ To a certain extent we are wasting our time. We have a perfect model of the worl
 
 ### Week 1
 
-- [Drinking from a fire hose](https://tellingstorieswithdata.com/02-drinking_from_a_fire_hose.html)
+-   [Drinking from a fire hose](https://tellingstorieswithdata.com/02-drinking_from_a_fire_hose.html)
 
 ### Week 2
 
-- [Reproducible workflows](https://tellingstorieswithdata.com/03-workflow.html)
+-   [Reproducible workflows](https://tellingstorieswithdata.com/03-workflow.html)
+-   Guest: Samita Prabhasavat
 
 ### Week 3
 
-- [R essentials](https://tellingstorieswithdata.com/20-r_essentials.html)
+-   [R essentials](https://tellingstorieswithdata.com/20-r_essentials.html)
 
 ### Week 4
 
-- [Writing research](https://tellingstorieswithdata.com/04-writing_research.html)
+-   [Writing research](https://tellingstorieswithdata.com/04-writing_research.html)
 -   Guest: Steven Coyne - "Who Owns This? The Ethics of Copyright"
 
 ### Week 5
 
-- [Static communication](https://tellingstorieswithdata.com/05-static_communication.html)
+-   [Static communication](https://tellingstorieswithdata.com/05-static_communication.html)
 
 ### Week 6
 
-- [Farm data](https://tellingstorieswithdata.com/06-farm.html)
+-   [Farm data](https://tellingstorieswithdata.com/06-farm.html)
 
 ### Week 7
 
-- [Gather data](https://tellingstorieswithdata.com/07-gather.html)
+-   [Gather data](https://tellingstorieswithdata.com/07-gather.html)
 
 ### Week 8
 
-- [Hunt data](https://tellingstorieswithdata.com/08-hunt.html)
+-   [Hunt data](https://tellingstorieswithdata.com/08-hunt.html)
 
 ### Week 9
 
-- [Clean and prepare](https://tellingstorieswithdata.com/09-clean_and_prepare.html)
+-   [Clean and prepare](https://tellingstorieswithdata.com/09-clean_and_prepare.html)
 
 ### Week 10
 
-- [Store and share](https://tellingstorieswithdata.com/10-store_and_share.html)
+-   [Store and share](https://tellingstorieswithdata.com/10-store_and_share.html)
 
 ### Week 11
 
-- [Exploratory data analysis](https://tellingstorieswithdata.com/11-eda.html)
+-   [Exploratory data analysis](https://tellingstorieswithdata.com/11-eda.html)
 
 ### Week 12
 
-- [Linear models](https://tellingstorieswithdata.com/12-ijalm.html)
+-   [Linear models](https://tellingstorieswithdata.com/12-ijalm.html)
 
 ## Assessment
 
 ### Summary
 
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Item                                     | Weight (%) | Due date                              | Notes                                                                                                                                                                                                                                                                                                   |
-+==========================================+===========:+======================================:+========================================================================================================================================================================================================================================================================================================:+
-| Quiz                                     | 7          | Tuesdays, noon, Weeks 1-12            | Only best seven out of twelve count.                                                                                                                                                                                                                                                                    |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| SQL quiz                                 | 1          | Tuesday, noon, Week 6                 | You cannot pass the course if you do not get at least 70 per cent in this quiz.                                                                                                                                                                                                                         |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Personal website                         | 1          | Tuesday, noon, Week 9                 | You cannot pass the course if you do not get at least 70 per cent on this assessment.                                                                                                                                                                                                                   |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            |                                       | Create a personal website using Quarto and make it live via GitHub Pages. At a minimum, it must include a bio and a CV in PDF form.                                                                                                                                                                     |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Tutorials                                | 6          | Tuesdays, noon, Weeks 1-12            | Only best three out of twelve count.                                                                                                                                                                                                                                                                    |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Term papers                              | 48         | Tuesdays, noon, Weeks 3, 6, 9         | You must submit Term Paper I in order to pass the course.                                                                                                                                                                                                                                               |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            | Term Paper I: 23 January 2024         | Only best two of three term papers count.                                                                                                                                                                                                                                                               |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            | Term Paper II: 13 February 2024       | Marking starts, noon, on the Thursday after submission, and you can update until then i.e. submissions made by noon, Tuesday, Week 3 can be updated until noon, Thursday, Week 3 (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts.       |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            | Term Paper III: 13 March 2024         | Term Paper I: [Donaldson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-one)                                                                                                                                                                                                    |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            |                                       | Term Paper II: [Mawson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-two).                                                                                                                                                                                                     |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            |                                       | Term paper III: Pick one of [Murrumbidgee Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-three), [Spadina Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-spadina), or [Spofforth Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-five) |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Conduct peer review of Term/Final papers | 3          | Wednesdays, noon, Weeks 3, 6, 9, 12   | Conduct peer review for six other term/final papers, by creating a GitHub Issue or Pull Request. Papers will be distributed by a spreadsheet---add a link to the Issue/PR to a term paper that does not have four other entries. You will only have 24 hours to do this.                                |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Final paper                              | 34         | Tuesday, noon, Week 12 (3 April 2024) | You must submit this paper.                                                                                                                                                                                                                                                                             |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            |                                       | Marking starts, noon, Friday 19 April and you can update update until then i.e. submissions made by noon, Tuesday, Week 12 can be updated until noon, Friday, 19 April (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts.                 |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            |                                       | [Final paper](https://tellingstorieswithdata.com/23-assessment.html#sec-final-paper).                                                                                                                                                                                                                   |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
++------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Item                                     | Weight (%) | Due date                                | Notes                                                                                                                                                                                                                                                                                           |
++==========================================+===========:+========================================:+================================================================================================================================================================================================================================================================================================:+
+| Quiz                                     | 7          | Wednesdays, noon, Weeks 1-12            | Only best seven out of twelve count.                                                                                                                                                                                                                                                            |
++------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| SQL quiz                                 | 1          | Wednesday, noon, Week 6                 | You cannot pass the course if you do not get at least 70 per cent in this quiz.                                                                                                                                                                                                                 |
++------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Personal website                         | 1          | Wednesday, noon, Week 9                 | You cannot pass the course if you do not get at least 70 per cent on this assessment.                                                                                                                                                                                                           |
+|                                          |            |                                         |                                                                                                                                                                                                                                                                                                 |
+|                                          |            |                                         | Create a personal website using Quarto and make it live via GitHub Pages. At a minimum, it must include a bio and a CV in PDF form.                                                                                                                                                             |
++------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Tutorials                                | 6          | Wednesdays, noon, Weeks 1-12            | Only best three out of twelve count.                                                                                                                                                                                                                                                            |
++------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Term papers                              | 48         | Wednesdays, noon, Weeks 3, 6, 9         | You must submit Term Paper I in order to pass the course.                                                                                                                                                                                                                                       |
+|                                          |            |                                         |                                                                                                                                                                                                                                                                                                 |
+|                                          |            | Term Paper I: 24 January 2024           | Only best two of three term papers count.                                                                                                                                                                                                                                                       |
+|                                          |            |                                         |                                                                                                                                                                                                                                                                                                 |
+|                                          |            | Term Paper II: 14 February 2024         | Marking starts, noon, on the Friday after submission, and you can update until then i.e. submissions made by noon, Wednesday, Week 3 can be updated until noon, Friday, Week 3 (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts. |
+|                                          |            |                                         |                                                                                                                                                                                                                                                                                                 |
+|                                          |            | Term Paper III: 13 March 2024           | Term Paper I: [Donaldson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-one)                                                                                                                                                                                            |
+|                                          |            |                                         |                                                                                                                                                                                                                                                                                                 |
+|                                          |            |                                         | Term Paper II: [Mawson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-two).                                                                                                                                                                                             |
+|                                          |            |                                         |                                                                                                                                                                                                                                                                                                 |
+|                                          |            |                                         | Term paper III: [Howrah Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-three).                                                                                                                                                                                          |
++------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Conduct peer review of Term/Final papers | 3          | Thursdays, noon, Weeks 3, 6, 9, 12      | Conduct peer review for six other term/final papers, by creating a GitHub Issue or Pull Request. Papers will be distributed by a spreadsheet---add a link to the Issue/PR to a term paper that does not have four other entries. You will only have 24 hours to do this.                        |
++------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Final paper                              | 34         | Wednesday, noon, Week 12 (3 April 2024) | You must submit this paper.                                                                                                                                                                                                                                                                     |
+|                                          |            |                                         |                                                                                                                                                                                                                                                                                                 |
+|                                          |            |                                         | Marking starts, noon, Monday 22 April and you can update update until then i.e. submissions made by noon, Wednesday, Week 12 can be updated until noon, Monday, 22 April (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts.       |
+|                                          |            |                                         |                                                                                                                                                                                                                                                                                                 |
+|                                          |            |                                         | [Final paper](https://tellingstorieswithdata.com/23-assessment.html#sec-final-paper).                                                                                                                                                                                                           |
++------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
 **You must submit Term Paper 1. You must submit the Final Paper. You must submit and get at least 70 per cent on both the SQL quiz and the Personal website.**
 
@@ -132,11 +133,11 @@ Additional details:
 -   Tutorial questions are drawn from those in the Tutorial section that follows each chapter of *Telling Stories with Data*. The general expectation (although this differs from week to week) is about two pages of written content. You should expect to know the mark within a few days of the tutorial.
 -   In general term papers require a considerable amount of work, and are due after the material has been covered in quizzes and tutorials (i.e. you would draw on knowledge tested in the quizzes, and potentially material could be re-used from the tutorial material). In general, they require original work to some extent. Papers are taken from the Papers appendix of *Telling Stories with Data* and students have access to the grading rubrics before submission.
 -   If you already have a website, please communicate with me about this early in the term so that I can let you know whether it can be used for the purposes of this submission.
--   Rubric for tutorial is:
-    -   0 - Any typos, major grammatical errors, other table stakes issues for this level. Too short.
-    -   0.25 - Grammatical errors, if relevant: tables/graphs not properly labeled, no references, other aspects that affect credibility.
-    -   0.6 - Makes some interesting and relevant points, related to course material (including required materials), but lacking in terms of structure and story/argument.
-    -   0.80 - Interesting paper that is well-structured, coherent, and credible.
+-   While they vary, a rough rubric for tutorial is:
+    -   0 - Any typos, grammatical errors, other table stakes issues for this level. Submission is too short. Other basic mistakes.
+    -   0.25 - Tables/graphs not properly labeled, no references, other aspects that affect credibility.
+    -   0.5 - Makes some interesting and relevant points, related to course material (including required materials), but lacking in terms of structure and story/argument.
+    -   0.80 - Interesting submission that is well-structured, coherent, and credible.
     -   1 - As with 0.80, but exceptional in some way.
 -   Only the best two of three term papers counts. This means each is worth 24 per cent.
 -   Peer review will occur for Term Paper I, but it is a just an optional 'practise'--students are typically not yet familiar enough with the expectations of the course so as to be able to provide valuable comments (other than noticing whether R has been cited!).
