Update based on Nathan's feedback

--- a/teaching-inf312.qmd
+++ b/teaching-inf312.qmd
@@ -94,11 +94,9 @@ To a certain extent we are wasting our time. We have a perfect model of the worl
 +==========================================+===========:+========================================:+================================================================================================================================================================================================================================================================================================:+
 | Quiz                                     | 7          | Wednesdays, noon, Weeks 1-12            | Only best seven out of twelve count.                                                                                                                                                                                                                                                            |
 +------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| SQL quiz                                 | 1          | Wednesday, noon, Week 6                 | You cannot pass the course if you do not get at least 70 per cent in this quiz.                                                                                                                                                                                                                 |
+| SQL quiz                                 | 1          | Wednesday, noon, Week 6                 |                                                                                                                                                                                                                                                                                                 |
 +------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Personal website                         | 1          | Wednesday, noon, Week 9                 | You cannot pass the course if you do not get at least 70 per cent on this assessment.                                                                                                                                                                                                           |
-|                                          |            |                                         |                                                                                                                                                                                                                                                                                                 |
-|                                          |            |                                         | Create a personal website using Quarto and make it live via GitHub Pages. At a minimum, it must include a bio and a CV in PDF form.                                                                                                                                                             |
+| Personal website                         | 1          | Wednesday, noon, Week 9                 | Create a personal website using Quarto and make it live via GitHub Pages. At a minimum, it must include a bio and a CV in PDF form.                                                                                                                                                             |
 +------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Tutorials                                | 6          | Wednesdays, noon, Weeks 1-12            | Only best three out of twelve count.                                                                                                                                                                                                                                                            |
 +------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
@@ -118,12 +116,12 @@ To a certain extent we are wasting our time. We have a perfect model of the worl
 +------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Final paper                              | 34         | Wednesday, noon, Week 12 (3 April 2024) | You must submit this paper.                                                                                                                                                                                                                                                                     |
 |                                          |            |                                         |                                                                                                                                                                                                                                                                                                 |
-|                                          |            |                                         | Marking starts, noon, Monday 22 April and you can update update until then i.e. submissions made by noon, Wednesday, Week 12 can be updated until noon, Monday, 22 April (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts.       |
+|                                          |            |                                         | Marking starts, noon, Monday 22 April and you can update until then i.e. submissions made by noon, Wednesday, Week 12 can be updated until noon, Monday, 22 April (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts. \|           |
 |                                          |            |                                         |                                                                                                                                                                                                                                                                                                 |
 |                                          |            |                                         | [Final paper](https://tellingstorieswithdata.com/23-assessment.html#sec-final-paper).                                                                                                                                                                                                           |
 +------------------------------------------+------------+-----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
-**You must submit Term Paper 1. You must submit the Final Paper. You must submit and get at least 70 per cent on both the SQL quiz and the Personal website.**
+**You must submit Term Paper 1. You must submit the Final Paper.**
 
 Beyond that, you have scope to pick an assessment schedule that works for you. I will take your best three of the twelve tutorials for that six per cent, and your best seven of twelve quizzes for that seven per cent. I take your two best papers from the three term papers for that 48 per cent (24 per cent for each). You get up to three percentage points for conducting peer review of other student papers, (half a percentage point per review). There is 34 per cent allocated for the Final Paper.
 
@@ -188,11 +186,7 @@ Please consult the University's [site](http://academicintegrity.utoronto.ca/) on
 
 ### Late policy
 
-I am trying to develop you to be able to get a job as a professional data scientist. Part of that is learning to manage your time effectively.
-
-If no extension has been granted and no accommodation applies, then the late submission of an assessment item carries a penalty of 10 percentage points per day to a maximum of one week after which it will no longer be accepted, e.g. a problem set submitted a day late that would have otherwise received 8/10 will receive 7/10, if that same problem set was submitted two days late then it would receive 6/10.
-
-Term papers and the final paper cannot be accepted after marking has started.
+If no extension has been granted and no accommodation applies, then late submissions will not be accepted.
 
 ### Writing
 
