--- a/teaching-sta302.qmd
+++ b/teaching-sta302.qmd
@@ -8,24 +8,13 @@ title: "Methods of Data Analysis I"
 
 "Methods", "Data", "Analysis"---we consider such loaded words in this course! What is data? What does it mean to do analysis? And what methods? The very core of statistical sciences!
 
-This course develops in students an appreciation for how our world becomes data, what to do in the face of overwhelming options for the analysis of that data, and how to do all this in a way that provides value to others.
-
-It is concerned with statistical modelling, but also everything that comes before and after modelling, and in doing so ensures modelling and analysis are placed on a firmer foundation. In assessment, students will conduct end-to-end data science projects using real-world data, enabling them to fully understand potential pitfalls, and build a portfolio.
-
-The focus of the learning will be on:
-
-1.  actively reading and consider relevant literature;
-2.  actively using the statistical programming language R in real-world conditions;
-3.  gathering, cleaning, and preparing datasets; and
-4.  choosing and implementing statistical models and evaluating their estimates.
-
-Essentially this course provides students with everything that they need to know to be able to do the most exciting thing in the world: use data to tell convincing stories.
+This course develops in students an appreciation for how our world becomes data, what to do in the face of overwhelming options for the analysis of that data, and how to do all this in a way that provides value to others. In addition, by the end of the course, students should be able to understand the mathematical aspects of linear regression and inference for regression models.
 
 ### FAQ
 
 -   Can I audit this course? Sure, but it is pointless, because the only way to learn this stuff is to do the work.
 -   Why is there so much assessment? The only way to learn this stuff is to actually do the work, and students only do the work when they are assessed. It is unfortunate, but there is no way around it.
--   How difficult is the course? Of students that enrol, the median student drops the course. But the mode overall grade at the end of the course is an A+. The course is not difficult, but the hands-on-projects mean it is a great opporunity for you to do a lot of work. Past students have said that it set them up for success in grad school applications and job interviews.
+-   How difficult is the course? Of students that enrol, the median student drops the course. But the mode overall grade at the end of the course is an A+. The course is not difficult, but the hands-on-projects mean it is a great opportunity for you to do a lot of work. Past students have said that it set them up for success in grad school applications and job interviews.
 -   What is the format of the class? There are rarely lectures because those are not effective. You should read the relevant chapter and attempt the quiz before class. During class we will focus on examples, activities and discussion. We will also have industry guests discuss their experience.
 -   You are asking about X, but you didn't explicitly teach that. In fact you're not teaching anything. We're just doing activities in class? A key skill is being able to teach yourself what you need. In general, I will probably have directed you to the materials that you should go over before class and then during class we will do activities that highlight aspects that are easy to over look, but you're welcome to ask for more pointers if I've not been clear enough.
 
@@ -33,14 +22,14 @@ Essentially this course provides students with everything that they need to know
 
 The purpose of the course is to develop the core skills to do with methods of data analysis that are applicable across academia and industry. By the end of the course, you should be able to:
 
-1.  Engage critically with ideas and readings in data analysis (demonstrated in all papers but also tutorials and quizzes).
+1.  Engage critically with ideas and readings in data analysis (demonstrated in all papers but also mini-essays and quizzes).
 2.  Conduct data analysis research in a reproducible and ethical way (demonstrated in all papers).
 3.  Clearly communicate what was done, what was found, and why in writing (demonstrated in all papers).
 4.  Understand what constitutes ethical high-quality data analysis practice, especially reproducibility and respect for those that underpin our data (demonstrated in all papers and selected quizzes).
 5.  Respectfully identify strengths and weaknesses in the data analysis research conducted by others (demonstrated in quizzes, and the peer review).
 6.  Develop the ability to appropriately choose and apply statistical models to real-world situations (demonstrated in the final paper)
 7.  Conduct all aspects of the typical data analysis workflow (demonstrated in all papers).
-8.  Reflect effectively on your own learning and professional development (demonstrated in some tutorials and quizzes).
+8.  Reflect effectively on your own learning and professional development (demonstrated in some mini-essays and quizzes).
 
 ### Textbook
 
@@ -84,11 +73,13 @@ Before class starts you should go through Chapter 1 "[Telling stories with data]
 
 -   [Clean and prepare](https://tellingstorieswithdata.com/09-clean_and_prepare.html)
 -   [Store and share](https://tellingstorieswithdata.com/10-store_and_share.html)
+-   [Missing data](https://tellingstorieswithdata.com/11-eda.html#missing-data)
 -   Guest: TBD
+
+### Reading Week
 
 ### Week 7
 
--   [Missing data](https://tellingstorieswithdata.com/11-eda.html#missing-data)
 -   [Linear models](https://tellingstorieswithdata.com/12-ijalm.html)
 -   Guest: TBD
 
@@ -99,9 +90,7 @@ Before class starts you should go through Chapter 1 "[Telling stories with data]
 
 ### Week 9
 
--   [Directed Acyclic Graphs](https://tellingstorieswithdata.com/14-causality_from_obs.html#directed-acyclic-graphs)
--   [Generalized linear models](https://tellingstorieswithdata.com/13-ijaglm.html)
--   Guest: TBD
+-   Mid-term
 
 ### Week 10
 
@@ -110,13 +99,13 @@ Before class starts you should go through Chapter 1 "[Telling stories with data]
 
 ### Week 11
 
--   [MRP](https://tellingstorieswithdata.com/15-mrp.html) and [Prediction](https://tellingstorieswithdata.com/27-prediction.html)
--   Guest: TBD
+-   [Prediction](https://tellingstorieswithdata.com/27-prediction.html)
 -   We will focus on trying to predict the upcoming US presidential election, with a view to students being able to write a final paper that could be submitted to the [PS: Political Science & Politics special issue](https://www.cambridge.org/core/journals/ps-political-science-and-politics/announcements/call-for-papers/special-issue-on-forecasting-the-2024-us-elections).
+-   Guest: TBD
 
 ### Week 12
 
--   [Production](https://tellingstorieswithdata.com/28-deploy.html)
+-   [MRP](https://tellingstorieswithdata.com/15-mrp.html) and
 -   Guest: TBD
 
 ## Assessment
@@ -128,15 +117,13 @@ Before class starts you should go through Chapter 1 "[Telling stories with data]
 +==========================================+===========:+======================================:+========================================================================================================================================================================================================================================================================================================:+
 | Quiz                                     | 7          | Tuesdays, noon, Weeks 1-12            | Only best seven out of twelve count.                                                                                                                                                                                                                                                                    |
 +------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| SQL quiz                                 | 1          | Tuesday, noon, Week 6                 | You cannot pass the course if you do not get at least 70 per cent in this quiz.                                                                                                                                                                                                                         |
+| SQL quiz                                 | 1          | Tuesday, noon, Week 6                 |                                                                                                                                                                                                                                                                                                         |
 +------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Personal website                         | 1          | Tuesday, noon, Week 9                 | You cannot pass the course if you do not get at least 70 per cent on this assessment.                                                                                                                                                                                                                   |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            |                                       | Create a personal website using Quarto and make it live via GitHub Pages. At a minimum, it must include a bio and a CV in PDF form.                                                                                                                                                                     |
+| Personal website                         | 1          | Tuesday, noon, Week 9                 | Create a personal website using Quarto and make it live via GitHub Pages. At a minimum, it must include a bio and a CV in PDF form.                                                                                                                                                                     |
 +------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Tutorials                                | 6          | Tuesdays, noon, Weeks 1-12            | Only best three out of twelve count.                                                                                                                                                                                                                                                                    |
+| Mini-essays                              | 6          | Tuesdays, noon, Weeks 1-12            | Only best three out of twelve count.                                                                                                                                                                                                                                                                    |
 +------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Term papers                              | 48         | Tuesdays, noon, Weeks 3, 6, 9         | You must submit Term Paper I in order to pass the course.                                                                                                                                                                                                                                               |
+| Term papers                              | 46         | Tuesdays, noon, Weeks 3, 6, 9         | You must submit Term Paper I in order to pass the course.                                                                                                                                                                                                                                               |
 |                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
 |                                          |            | Term Paper I: 23 January 2024         | Only best two of three term papers count.                                                                                                                                                                                                                                                               |
 |                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
@@ -149,31 +136,35 @@ Before class starts you should go through Chapter 1 "[Telling stories with data]
 |                                          |            |                                       | Term paper III: Pick one of [Murrumbidgee Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-three), [Spadina Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-spadina), or [Spofforth Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-five) |
 +------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Conduct peer review of Term/Final papers | 3          | Wednesdays, noon, Weeks 3, 6, 9, 12   | Conduct peer review for six other term/final papers, by creating a GitHub Issue or Pull Request. Papers will be distributed by a spreadsheet---add a link to the Issue/PR to a term paper that does not have four other entries. You will only have 24 hours to do this.                                |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Final paper                              | 34         | Tuesday, noon, Week 12 (2 April 2024) | You must submit this paper.                                                                                                                                                                                                                                                                             |
 |                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            |                                       | Marking starts, noon, Thursday 18 April and you can update update until then i.e. submissions made by noon, Tuesday, Week 12 can be updated until noon, Thursday, 18 April (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts.             |
+|                                          |            |                                       | Students are not assigning grades to other students, but are instead getting the mark based on the quality of the feedback they provide to other students.                                                                                                                                              |
++------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Mid-term                                 | 6          | In-class, Tuesday, 12 March 2024      | A mid-term consisting of a few questions.                                                                                                                                                                                                                                                               |
++------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Final paper                              | 30         | Tuesday, noon, Week 12 (2 April 2024) | You must submit this paper.                                                                                                                                                                                                                                                                             |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
+|                                          |            |                                       | Marking starts, noon, Thursday 18 April and you can update until then i.e. submissions made by noon, Tuesday, Week 12 can be updated until noon, Thursday, 18 April (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts. \|                 |
 |                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
 |                                          |            |                                       | [Final paper](https://tellingstorieswithdata.com/23-assessment.html#sec-final-paper).                                                                                                                                                                                                                   |
 +------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
-**You must submit Term Paper 1. You must submit the Final Paper. You must submit and get at least 70 per cent on both the SQL quiz and the Personal website.**
+**You must submit Term Paper 1. You must submit the Final Paper.**
 
-Beyond that, you have scope to pick an assessment schedule that works for you. I will take your best three of the twelve tutorials for that six per cent, and your best seven of twelve quizzes for that seven per cent. I take your two best papers from the three term papers for that 48 per cent (24 per cent for each). You get up to three percentage points for conducting peer review of other student papers, (half a percentage point per review). There is 34 per cent allocated for the Final Paper.
+Beyond that, you have scope to pick an assessment schedule that works for you. I will take your best three of the twelve insight mini-essays for that six per cent, and your best seven of twelve quizzes for that seven per cent. I take your two best papers from the three term papers for that 46 per cent (23 per cent for each). You get up to three percentage points for conducting peer review of other student papers, (half a percentage point per review). There is 30 per cent allocated for the Final Paper.
 
 Additional details:
 
 -   Quiz questions are drawn from those in the Quiz section that follows each chapter of *Telling Stories with Data*. Some of them are multiple choice, and you should expect to know the mark within a few days of submission. Please do them before coming to class.
--   Tutorial questions are drawn from those in the Tutorial section that follows each chapter of *Telling Stories with Data*. The general expectation (although this differs from week to week) is about two pages of written content. You should expect to know the mark within a few days of the tutorial.
--   In general term papers require a considerable amount of work, and are due after the material has been covered in quizzes and tutorials (i.e. you would draw on knowledge tested in the quizzes, and potentially material could be re-used from the tutorial material). In general, they require original work to some extent. Papers are taken from the Papers appendix of *Telling Stories with Data* and students have access to the grading rubrics before submission.
+-   Mini-essay questions are drawn from those in the Tutorial section that follows each chapter of *Telling Stories with Data*. The general expectation (although this differs from week to week) is about two pages of written content. You should expect to know the mark within a few days of submission.
+-   In general term papers require a considerable amount of work, and are due after the material has been covered in quizzes and mini-essays (i.e. you would draw on knowledge tested in the quizzes, and potentially material could be re-used from the mini-essay material). In general, they require original work to some extent. Papers are taken from the Papers appendix of *Telling Stories with Data* and students have access to the grading rubrics before submission.
 -   If you already have a website, please communicate with me about this early in the term so that I can let you know whether it can be used for the purposes of this submission.
--   While they vary, a rough rubric for tutorial is:
+-   While they vary, a rough rubric for mini-essays is:
     -   0 - Any typos, grammatical errors, other table stakes issues for this level. Submission is too short. Other basic mistakes.
     -   0.25 - Tables/graphs not properly labeled, no references, other aspects that affect credibility.
     -   0.5 - Makes some interesting and relevant points, related to course material (including required materials), but lacking in terms of structure and story/argument.
     -   0.80 - Interesting submission that is well-structured, coherent, and credible.
     -   1 - As with 0.80, but exceptional in some way.
--   Only the best two of three term papers counts. This means each is worth 24 per cent.
+-   Only the best two of three term papers counts. This means each is worth 23 per cent.
 -   Peer review will occur for Term Paper I, but it is a just an optional 'practise'--students are typically not yet familiar enough with the expectations of the course so as to be able to provide valuable comments (other than noticing whether R has been cited!).
 
 ## Other
@@ -191,15 +182,16 @@ Please do **not** reveal your personal or medical information to me. I understan
 Straight-forward (will automatically apply to all students---there is no need to ask for these):
 
 -   Quiz: Only your best seven quizzes count.
--   Tutorial: Only your best three tutorials count.
+-   Mini-essays: Only your best three mini-essays count.
 -   Term Papers: Only your best two term papers count.
 
 So for those, if you have a situation, then just do not submit (or in the case of Term Paper I, just submit a blank page).
 
 Slightly more involved:
 
--   Term Paper I: You must submit something for Term Paper I, even if it gets zero. If you have a medical emergency that makes it impossible for you to submit even a blank page for Term Paper I, then please email me. In that situation one of the remaining term papers must be done individually to ensure fairness with the rest of the class.
+-   Term Paper I: You must submit something for Term Paper I, even if it gets zero. If you have a medical emergency that makes it impossible for you to submit even a blank page for Term Paper I, then please email me and cc your faculty/department/college advisor. In that situation one of the remaining term papers must be done individually to ensure fairness with the rest of the class.
 -   Peer review: No accommodation or late submission is possible for this because it would hold up the rest of the class. That said, there are many opportunities to get the peer review marks, so if you cannot do any for a particular paper, then just do the others. If you have a medical emergency that makes this impossible, then please email me and cc your faculty/department/college advisor so that we can work out an alternative plan.
+-   Mid-term: If you miss the mid-term in Week 9, then you will have the opportunity to do it in Week 10.
 -   Final paper: The final paper is a critical piece of assessment. It is also up against deadlines for submission of grades (especially for graduating students). If you have a medical emergency that makes it impossible for you to submit before marking begins, then I **may** be able to grant you an extension of up to three days. Email me and cc your faculty/department/college advisor so that we can work out a alternative plan.
 
 ### Re-grading
@@ -222,11 +214,7 @@ Please consult the University's [site](http://academicintegrity.utoronto.ca/) on
 
 ### Late policy
 
-I am trying to develop you to be able to get a job as a professional data scientist. Part of that is learning to manage your time effectively.
-
-If no extension has been granted and no accommodation applies, then the late submission of an assessment item carries a penalty of 10 percentage points per day to a maximum of one week after which it will no longer be accepted, e.g. a problem set submitted a day late that would have otherwise received 8/10 will receive 7/10, if that same problem set was submitted two days late then it would receive 6/10.
-
-Term papers and the final paper cannot be accepted after marking has started.
+If no extension has been granted and no accommodation applies, then late submissions will not be accepted.
 
 ### Writing
 
@@ -234,7 +222,7 @@ Papers and reports should be well-written, well-organized, and easy to follow. T
 
 ### Minimum submission requirement
 
-If you are going to not be able to submit at least two term papers, and/or be unable to submit the final paper then it would be unfair on the other students to allow you to pass the course. But it is not a situation that I want to get into. Please ensure you and your college registrar or faculty/department advisor get in touch with me as early as possible if this may be the case for you so that we can work out a solution.
+If you are going to not be able to submit at least two term papers, and/or be unable to submit the final paper then it would be unfair on the other students to allow you to pass the course. Please ensure you and your college registrar or faculty/department advisor get in touch with me as early as possible if this may be the case for you so that we can work out a solution.
 
 ### Letters of recommendation
 
