--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -26,6 +26,7 @@ The TDW is a joint initiative between the Faculty of Information and the Departm
 
 - Thursday 18 January 2024, noon - 1pm
 	- **Gregory Zuckerman**, Wall Street Journal
+	- ["Renaissance, data, and Wall Street"](https://youtu.be/Q2r-MfEUaP0)
 	- Gregory Zuckerman is a special writer at *The Wall Street Journal* and non-fiction author. His non-fiction books include *"The Greatest Trade Ever: The Behind-the-Scenes Story of How John Paulson Defied Wall Street and Made Financial History"*, *"The Frackers: The Outrageous Inside Story of the New Billionaire Wildcatters"*, two books for children, *"The Man Who Solved the Market: How Jim Simons Launched the Quant Revolution"* and *"A Shot to Save the World: The Inside Story of the Life-or-Death Race for a COVID-19 Vaccine"*. He has been awarded the Gerald Loeb Award, the highest honor in business journalism, three times.
 - Thursday 25 January 2024, noon - 1pm
 	- **Kristina Gligorić**, Stanford University
